--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "psr-4": {
             "App\\": "app/",
             "Modules\\": "Modules/",
+            "ThirdParties\\":"ThirdParties/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         },
